--- a/templates/book/insert_form.html.twig
+++ b/templates/book/insert_form.html.twig
@@ -1,3 +1,14 @@
-{# je crée le html de mon formulaire (balise form, input etc) en utilisant la fonction
+{% extends 'base.html.twig' %}
+
+{% block section %}
+<div class="container">
+
+
+    <div class="books">
+        {# je crée le html de mon formulaire (balise form, input etc) en utilisant la fonction
  form() avec en parametre ma variable de formulaire  #}
-{{ form(bookFormView) }}
+        {{ form(bookFormView) }}
+    </div>
+</div>
+
+{% endblock %}
